--- a/Plantilla/startbootstrap-clean-blog-gh-pages/contact.html
+++ b/Plantilla/startbootstrap-clean-blog-gh-pages/contact.html
@@ -58,9 +58,9 @@
 		<a href="post.html">
   			<img src="img/search_icon.png">
   		</a>
-      	<a href="iniciar_sesion.html" class="nav-op">Iniciar sesión</a>
+      	<a href="inicio_sesion.html" class="nav-op">Iniciar sesión</a>
       	<div id="registro" class="collapse navbar-collapse">
-      		<a href="registro.html" class="nav-op" id="nav-reg">Registro</a>
+      		<a href="registro.html" class="nav-op red-button button">Registro</a>
       	</div>
       </div>
     </div>
@@ -79,21 +79,21 @@
         <form name="sentMessage" id="contactForm" novalidate>
           <div class="control-group">
             <div class="form-group floating-label-form-group controls">
-              <label>Name</label>
+              <label>Nombre</label>
               <input type="text" id="name" required data-validation-required-message="Please enter your name.">
               <p class="help-block text-danger"></p>
             </div>
           </div>
           <div class="control-group">
             <div class="form-group floating-label-form-group controls">
-              <label>Email Address</label>
+              <label>Email</label>
               <input type="email" id="email" required data-validation-required-message="Please enter your email address.">
               <p class="help-block text-danger"></p>
             </div>
           </div>
           <div class="control-group">
             <div class="form-group floating-label-form-group controls">
-              <label>Message</label>
+              <label>Mensage</label>
               <textarea rows="5" id="message" required data-validation-required-message="Please enter a message."></textarea>
               <p class="help-block text-danger"></p>
             </div>
@@ -104,6 +104,11 @@
           	<button type="submit" class="btn-primary" id="sendMessageButton">Send</button>
           </div>
         </form>
+      </div>
+    </div>
+    <div class="row inner_pad">
+      <div class="col-sm-12 mx-auto text-center">
+        <iframe src="https://www.google.com/maps/d/u/0/embed?mid=1yErDFAJoV0o-j5xNbJOhK_O-UlZFt-O6" width="640" height="480"></iframe>
       </div>
     </div>
   </div>
@@ -117,27 +122,18 @@
         <div class="col-lg-8 col-md-10 mx-auto">
           <ul class="list-inline text-center">
             <li class="list-inline-item">
-              <a href="#">
-                <span class="fa-stack fa-lg">
-                  <i class="fas fa-circle fa-stack-2x"></i>
-                  <i class="fab fa-twitter fa-stack-1x fa-inverse"></i>
-                </span>
+              <a href="#" class="circle-icon facebook_icon">
+                <img width="30" height="30" src="img/facebook.png">
               </a>
             </li>
             <li class="list-inline-item">
-              <a href="#">
-                <span class="fa-stack fa-lg">
-                  <i class="fas fa-circle fa-stack-2x"></i>
-                  <i class="fab fa-facebook-f fa-stack-1x fa-inverse"></i>
-                </span>
+              <a href="#" class="circle-icon google_plus">
+                <img width="30" height="20" src="img/goog_plus.png">
               </a>
             </li>
             <li class="list-inline-item">
-              <a href="#">
-                <span class="fa-stack fa-lg">
-                  <i class="fas fa-circle fa-stack-2x"></i>
-                  <i class="fab fa-github fa-stack-1x fa-inverse"></i>
-                </span>
+              <a href="#" class="circle-icon linked_in">
+                <img width="20" height="20" src="img/linked_in.png">
               </a>
             </li>
           </ul>
