agregado cosas al homepage

--- a/Plantilla/startbootstrap-clean-blog-gh-pages/homepage.html
+++ b/Plantilla/startbootstrap-clean-blog-gh-pages/homepage.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Clean Blog - Start Bootstrap Theme</title>
+  <title>Homepage</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -67,6 +67,7 @@
   </nav>
   
   <!-- Main Content -->
+  <!--image-->>
   <br>
   <div class = "frontImage">
     <img src = "img/homepage-img.jpg">
@@ -77,6 +78,7 @@
 
   </div>
   <br>
+  <!--recipe section-->
   <div class="container">
 
     <div class="row">
@@ -100,12 +102,12 @@
 
           <div class="col-lg-4 col-md-6 mb-4">
             <div class="card h-100">
-              <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
+              <a href="#"><img class="card-img-top" src="img/recipeimg/Chana Masala.jpg" alt=""></a>
               <div class="card-body">
                 <h4 class="card-title">
-                  <a href="#">Item One</a>
+                  <a href="#" class = "recipeName">Chana Masala</a>
                 </h4>
-                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur!</p>
+                <p class="card-text">by John Brown</p>
               </div>
               <div class="card-footer">
                 <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
@@ -115,12 +117,12 @@
 
           <div class="col-lg-4 col-md-6 mb-4">
             <div class="card h-100">
-              <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
+              <a href="#"><img class="card-img-top" src="img/recipeimg/black bean burritos.jpg" id = recipeImg alt=""></a>
               <div class="card-body">
                 <h4 class="card-title">
-                  <a href="#">Item Two</a>
+                  <a href="#" class = "recipeName">Black Bean Burrito</a>
                 </h4>
-                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur! Lorem ipsum dolor sit amet.</p>
+                <p class="card-text">by John Brown</p>
               </div>
               <div class="card-footer">
                 <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
@@ -130,12 +132,12 @@
 
           <div class="col-lg-4 col-md-6 mb-4">
             <div class="card h-100">
-              <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
+              <a href="#"><img class="card-img-top" src="img/recipeimg/fanesca.jpg" alt=""></a>
               <div class="card-body">
                 <h4 class="card-title">
-                  <a href="#">Item Four</a>
+                  <a href="#" class = "recipeName">Fanesca</a>
                 </h4>
-                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur!</p>
+                <p class="card-text">by John Brown</p>
               </div>
               <div class="card-footer">
                 <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
@@ -145,12 +147,12 @@
 
           <div class="col-lg-4 col-md-6 mb-4">
             <div class="card h-100">
-              <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
+              <a href="#"><img class="card-img-top" src="img/recipeimg/tigrillo.jpg" alt=""></a>
               <div class="card-body">
                 <h4 class="card-title">
-                  <a href="#">Item Four</a>
+                  <a href="#" class = "recipeName">Tigrillo</a>
                 </h4>
-                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur!</p>
+                <p class="card-text">by John Brown</p>
               </div>
               <div class="card-footer">
                 <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
@@ -160,12 +162,12 @@
 
           <div class="col-lg-4 col-md-6 mb-4">
             <div class="card h-100">
-              <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
+              <a href="#"><img class="card-img-top" src="img/recipeimg/Fritada.jpg" alt=""></a>
               <div class="card-body">
                 <h4 class="card-title">
-                  <a href="#">Item Five</a>
+                  <a href="#" class = "recipeName">Fritada</a>
                 </h4>
-                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur! Lorem ipsum dolor sit amet.</p>
+                <p class="card-text">by John Brown</p>
               </div>
               <div class="card-footer">
                 <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
@@ -175,12 +177,12 @@
 
           <div class="col-lg-4 col-md-6 mb-4">
             <div class="card h-100">
-              <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
+              <a href="#"><img class="card-img-top" src="img/recipeimg/easy jambalaya.jpg" alt=""></a>
               <div class="card-body">
                 <h4 class="card-title">
-                  <a href="#">Item Six</a>
+                  <a href="#" class = "recipeName">Easy Jambalaya</a>
                 </h4>
-                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur!</p>
+                <p class="card-text">by John Brown</p>
               </div>
               <div class="card-footer">
                 <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
@@ -198,7 +200,41 @@
     <!-- /.row -->
 
   </div>
-
+<br>  
+<!-- video section-->
+<h1 class = "videoText">Videos</h1>
+<div class="imagegrid-container">
+    <div class = "recipeVideo">
+      <div class = "recipeVideoText">
+        <h3>Titulo del video</h3>
+        <h6>de Autor</h6>
+      </div>
+      <img src="img/recipeimg/taco pizza squares.jpg"/>
+    </div>
+    <div class = "recipeVideo">
+      <div class = "recipeVideoText">
+        <h3>Titulo del video</h3>
+        <h6>de Autor</h6>
+      </div>
+      <img src="img/recipeimg/Peanut butter coconout cookies.jpg"/>
+    </div>
+    <div class = "recipeVideo">
+      <div class = "recipeVideoText">
+        <h3>Titulo del video</h3>
+        <h6>de Autor</h6>
+      </div>
+      <img src="img/recipeimg/shrimp pad thai.jpg"/>
+    </div>
+    <div class = "recipeVideo">
+      <div class = "recipeVideoText">
+        <h3>Titulo del video</h3>
+        <h6>de Autor</h6>
+      </div>
+      <img src="img/recipeimg/Ham & Spinach Casserole.jpg"/>
+    </div>
+</div>
+<br>
+<!--email form-->
   <hr>
       <div class="col-lg-10 col-md-10 mx-auto" id="bottomContainer">
         <h3 style = "color:white; text-align: center">Recibe los últimos descuentos, noticias y notificaciones de las recetas más populares</h3 >
