--- a/sabor-compartido/src/index.html
+++ b/sabor-compartido/src/index.html
@@ -3,10 +3,12 @@
 <head>
   <meta charset="utf-8">
   <title>SaborCompartido</title>
-  <base href="/">
+  <base href="./">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
+  <link href='src/vendor/fontawesome-free/css/all.min.css' rel='stylesheet' type='text/css'>
+
+  
   <link href='https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
   <link href="https://fonts.googleapis.com/css?family=Leckerli+One&amp;display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,600&amp;display=swap" rel="stylesheet">
