--- a/Plantilla/startbootstrap-clean-blog-gh-pages/homepage.html
+++ b/Plantilla/startbootstrap-clean-blog-gh-pages/homepage.html
@@ -41,7 +41,7 @@
             <a class="nav-op" href="index.html">Principal</a>
           </li>
           <li class="nav-item">
-            <a class="nav-op" href="about.html">Receta</a>
+            <a class="nav-op" href="receta.html">Receta</a>
           </li>
           <li class="nav-item">
             <a class="nav-op" href="post.html">Buscar</a>
