correcciones a los links del navbar y recomendaciones del validador w3c

--- a/Plantilla/startbootstrap-clean-blog-gh-pages/homepage.html
+++ b/Plantilla/startbootstrap-clean-blog-gh-pages/homepage.html
@@ -30,7 +30,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-light">
     <div class="container">
-      <a class="navbar-brand logo" href="index.html">Logo</a>
+      <a class="navbar-brand logo" href="homepage.html">Logo</a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         Menu
         <i class="fas fa-bars"></i>
@@ -38,7 +38,7 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-op" href="index.html">Principal</a>
+            <a class="nav-op" href="homepage.html">Principal</a>
           </li>
           <li class="nav-item">
             <a class="nav-op" href="receta.html">Receta</a>
@@ -56,9 +56,9 @@
 			<input id="search-bar" type="search" placeholder="Buscar...">
 		</form>
 		<a href="post.html">
-  			<img src="img/search_icon.png">
+  			<img src="img/search_icon.png" alt="ícono de búsqueda">
   		</a>
-      	<a href="iniciar_sesion.html" class="nav-op">Iniciar sesión</a>
+      	<a href="inicio_sesion.html" class="nav-op">Iniciar sesión</a>
       	<div id="registro" class="collapse navbar-collapse">
       		<a href="registro.html" class="nav-op" id="nav-reg">Registro</a>
       	</div>
@@ -67,10 +67,10 @@
   </nav>
   
   <!-- Main Content -->
-  <!--image-->>
+  <!--image-->
   <br>
   <div class = "frontImage">
-    <img src = "img/homepage-img.jpg">
+    <img src = "img/homepage-img.jpg" alt="banner principal">
     <div class ="imageText"><h1>Descubre miles de recetas</h1>
       <br>
       <h4>Disfruta de un repositorio de recetas certificadas por profesionales</h4>
@@ -102,7 +102,7 @@
 
           <div class="col-lg-4 col-md-6 mb-4">
             <div class="card h-100">
-              <a href="#"><img class="card-img-top" src="img/recipeimg/Chana Masala.jpg" alt=""></a>
+              <a href="#"><img class="card-img-top" src="img/recipeimg/Chana_Masala.jpg" alt="Chana Masala"></a>
               <div class="card-body">
                 <h4 class="card-title">
                   <a href="#" class = "recipeName">Chana Masala</a>
@@ -117,7 +117,7 @@
 
           <div class="col-lg-4 col-md-6 mb-4">
             <div class="card h-100">
-              <a href="#"><img class="card-img-top" src="img/recipeimg/black bean burritos.jpg" id = recipeImg alt=""></a>
+              <a href="#"><img class="card-img-top" src="img/recipeimg/black_bean_burritos.jpg" id = recipeImg alt="Burritos con fréjoles negros"></a>
               <div class="card-body">
                 <h4 class="card-title">
                   <a href="#" class = "recipeName">Black Bean Burrito</a>
@@ -132,7 +132,7 @@
 
           <div class="col-lg-4 col-md-6 mb-4">
             <div class="card h-100">
-              <a href="#"><img class="card-img-top" src="img/recipeimg/fanesca.jpg" alt=""></a>
+              <a href="#"><img class="card-img-top" src="img/recipeimg/fanesca.jpg" alt="fanesca"></a>
               <div class="card-body">
                 <h4 class="card-title">
                   <a href="#" class = "recipeName">Fanesca</a>
@@ -147,7 +147,7 @@
 
           <div class="col-lg-4 col-md-6 mb-4">
             <div class="card h-100">
-              <a href="#"><img class="card-img-top" src="img/recipeimg/tigrillo.jpg" alt=""></a>
+              <a href="#"><img class="card-img-top" src="img/recipeimg/tigrillo.jpg" alt="tigrillo"></a>
               <div class="card-body">
                 <h4 class="card-title">
                   <a href="#" class = "recipeName">Tigrillo</a>
@@ -162,7 +162,7 @@
 
           <div class="col-lg-4 col-md-6 mb-4">
             <div class="card h-100">
-              <a href="#"><img class="card-img-top" src="img/recipeimg/Fritada.jpg" alt=""></a>
+              <a href="#"><img class="card-img-top" src="img/recipeimg/Fritada.jpg" alt="fritada"></a>
               <div class="card-body">
                 <h4 class="card-title">
                   <a href="#" class = "recipeName">Fritada</a>
@@ -177,7 +177,7 @@
 
           <div class="col-lg-4 col-md-6 mb-4">
             <div class="card h-100">
-              <a href="#"><img class="card-img-top" src="img/recipeimg/easy jambalaya.jpg" alt=""></a>
+              <a href="#"><img class="card-img-top" src="img/recipeimg/easy_jambalaya.jpg" alt="jambalaya"></a>
               <div class="card-body">
                 <h4 class="card-title">
                   <a href="#" class = "recipeName">Easy Jambalaya</a>
@@ -209,28 +209,28 @@
         <h3>Titulo del video</h3>
         <h6>de Autor</h6>
       </div>
-      <img src="img/recipeimg/taco pizza squares.jpg"/>
+      <img src="img/recipeimg/taco_pizza_squares.jpg" alt="taco pizza"/>
     </div>
     <div class = "recipeVideo">
       <div class = "recipeVideoText">
         <h3>Titulo del video</h3>
         <h6>de Autor</h6>
       </div>
-      <img src="img/recipeimg/Peanut butter coconout cookies.jpg"/>
+      <img src="img/recipeimg/Peanut_butter_coconout_cookies.jpg" alt="galletas de coco y mantequilla de maní"/>
     </div>
     <div class = "recipeVideo">
       <div class = "recipeVideoText">
         <h3>Titulo del video</h3>
         <h6>de Autor</h6>
       </div>
-      <img src="img/recipeimg/shrimp pad thai.jpg"/>
+      <img src="img/recipeimg/shrimp_pad_thai.jpg" alt="pad thai de camarón"/>
     </div>
     <div class = "recipeVideo">
       <div class = "recipeVideoText">
         <h3>Titulo del video</h3>
         <h6>de Autor</h6>
       </div>
-      <img src="img/recipeimg/Ham & Spinach Casserole.jpg"/>
+      <img src="img/recipeimg/Ham_&_Spinach_Casserole.jpg" alt="caserola de jamón y espinaca"/>
     </div>
 </div>
 <br>
@@ -253,7 +253,6 @@
             <div id="success"></div>
             <div class="text-center">
               <button type="submit" class="btn-primary" id="subButton">Subscribete</button>
-            </div>
             </div>
           </div>
         </div>
