--- a/Plantilla/startbootstrap-clean-blog-gh-pages/contact.html
+++ b/Plantilla/startbootstrap-clean-blog-gh-pages/contact.html
@@ -30,7 +30,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-light">
     <div class="container">
-      <a class="navbar-brand logo" href="index.html">Logo</a>
+      <a class="navbar-brand logo" href="homepage.html">Logo</a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         Menu
         <i class="fas fa-bars"></i>
@@ -38,10 +38,10 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-op" href="index.html">Principal</a>
+            <a class="nav-op" href="homepage.html">Principal</a>
           </li>
           <li class="nav-item">
-            <a class="nav-op" href="about.html">Receta</a>
+            <a class="nav-op" href="receta.html">Receta</a>
           </li>
           <li class="nav-item">
             <a class="nav-op" href="post.html">Buscar</a>
@@ -56,7 +56,7 @@
 			<input id="search-bar" type="search" placeholder="Buscar...">
 		</form>
 		<a href="post.html">
-  			<img src="img/search_icon.png">
+  			<img src="img/search_icon.png" alt="Ícono de búsqueda">
   		</a>
       	<a href="inicio_sesion.html" class="nav-op">Iniciar sesión</a>
       	<div id="registro" class="collapse navbar-collapse">
@@ -123,17 +123,17 @@
           <ul class="list-inline text-center">
             <li class="list-inline-item">
               <a href="#" class="circle-icon facebook_icon">
-                <img width="30" height="30" src="img/facebook.png">
+                <img width="30" height="30" src="img/facebook.png" alt="ícono de facebook">
               </a>
             </li>
             <li class="list-inline-item">
               <a href="#" class="circle-icon google_plus">
-                <img width="30" height="20" src="img/goog_plus.png">
+                <img width="30" height="20" src="img/goog_plus.png" alt="ícono de google plus">
               </a>
             </li>
             <li class="list-inline-item">
               <a href="#" class="circle-icon linked_in">
-                <img width="20" height="20" src="img/linked_in.png">
+                <img width="20" height="20" src="img/linked_in.png" alt="ícono de linked in">
               </a>
             </li>
           </ul>
