--- a/Plantilla/startbootstrap-clean-blog-gh-pages/receta.html
+++ b/Plantilla/startbootstrap-clean-blog-gh-pages/receta.html
@@ -32,7 +32,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-light">
     <div class="container">
-      <a class="navbar-brand logo" href="index.html">Logo</a>
+      <a class="navbar-brand logo" href="homepage.html">Logo</a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         Menu
         <i class="fas fa-bars"></i>
@@ -40,7 +40,7 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-op" href="index.html">Principal</a>
+            <a class="nav-op" href="homepage.html">Principal</a>
           </li>
           <li class="nav-item">
             <a class="nav-op" href="receta.html">Receta</a>
@@ -58,9 +58,9 @@
 			<input id="search-bar" type="search" placeholder="Buscar...">
 		</form>
 		<a href="post.html">
-  			<img src="img/search_icon.png">
+  			<img src="img/search_icon.png" alt="ícono de búsqueda">
   		</a>
-      	<a href="iniciar_sesion.html" class="nav-op">Iniciar sesión</a>
+      	<a href="inicio_sesion.html" class="nav-op">Iniciar sesión</a>
       	<div id="registro" class="collapse navbar-collapse">
       		<a href="registro.html" class="nav-op" id="nav-reg">Registro</a>
       	</div>
@@ -74,7 +74,7 @@
   <div class="main-container">
     <div class="recipe-description-container">
         <div class="image-container">
-          <img src = "img/pancake.jpeg">
+          <img src = "img/pancake.jpeg" alt="pancake de arándanos">
         </div>
       
       <div class ="recipe-description">
@@ -106,7 +106,7 @@
               </div>
               <div class="content">
                 <div class="icon-container">
-                  <img src="img/Raster.png" alt="">
+                  <img src="img/Raster.png" alt="Raster">
                 </div>
                 <div class="content-details">
                   <span class="title">Porciones totales</span>
