--- a/Plantilla/startbootstrap-clean-blog-gh-pages/registro.html
+++ b/Plantilla/startbootstrap-clean-blog-gh-pages/registro.html
@@ -31,7 +31,7 @@
     <div class="row">
       <div class="col-lg-6 col-md-12 mx-auto inner_pad text-center reg-log-form">
       	<div>
-	      	<a href="index.html" class="logo">Logo</a>
+	      	<a href="homepage.html" class="logo">Logo</a>
 	      </div>
         <div>
           <h1>Inicia Sesión</h1>
@@ -39,17 +39,17 @@
         <ul class="list-inline text-center">
           <li class="list-inline-item">
             <a href="#" class="circle-icon facebook_icon">
-              <img width="30" height="30" src="img/facebook.png">
+              <img width="30" height="30" src="img/facebook.png" alt="ícono de facebook">
             </a>
           </li>
           <li class="list-inline-item">
             <a href="#" class="circle-icon google_plus">
-              <img width="30" height="20" src="img/goog_plus.png">
+              <img width="30" height="20" src="img/goog_plus.png" alt="ícono de google plus">
             </a>
           </li>
           <li class="list-inline-item">
             <a href="#" class="circle-icon linked_in">
-              <img width="20" height="20" src="img/linked_in.png">
+              <img width="20" height="20" src="img/linked_in.png" alt="ícono de linked in">
             </a>
           </li>
         </ul>
