Creación de about

--- a/Plantilla/startbootstrap-clean-blog-gh-pages/registro.html
+++ b/Plantilla/startbootstrap-clean-blog-gh-pages/registro.html
@@ -31,10 +31,10 @@
     <div class="row">
       <div class="col-lg-6 col-md-12 mx-auto inner_pad text-center reg-log-form">
       	<div>
-	      	<a href="homepage.html" class="logo">Logo</a>
+	      	<a href="homepage.html" class="logo">Sabores Compartidos</a>
 	      </div>
         <div>
-          <h1>Inicia Sesión</h1>
+          <h1>Regístrate</h1>
         </div>
         <ul class="list-inline text-center">
           <li class="list-inline-item">
