--- a/Plantilla/startbootstrap-clean-blog-gh-pages/about.html
+++ b/Plantilla/startbootstrap-clean-blog-gh-pages/about.html
@@ -15,52 +15,69 @@
 
   <!-- Custom fonts for this template -->
   <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@700&display=swap" rel="stylesheet">
   <link href='https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
+  <link href="https://fonts.googleapis.com/css?family=Leckerli+One&amp;display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,600&amp;display=swap" rel="stylesheet">
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
 
   <!-- Custom styles for this template -->
-  <link href="css/clean-blog.min.css" rel="stylesheet">
+  <link href="css/about.css" rel="stylesheet">
+  <link href="css/recipe.css" rel="stylesheet">
 
 </head>
 
 <body>
 
   <!-- Navigation -->
-  <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
+  <nav class="navbar navbar-expand-lg navbar-light">
     <div class="container">
-      <a class="navbar-brand" href="index.html">Start Bootstrap</a>
+      <a class="navbar-brand logo" href="homepage.html">Sabores Compartidos</a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         Menu
         <i class="fas fa-bars"></i>
       </button>
       <div class="collapse navbar-collapse" id="navbarResponsive">
-        <ul class="navbar-nav ml-auto">
+        <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" href="index.html">Home</a>
+            <a class="nav-op" href="homepage.html">Principal</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="about.html">About</a>
+            <a class="nav-op" href="receta.html">Receta</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="post.html">Sample Post</a>
+            <a class="nav-op" href="post.html">Buscar</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="contact.html">Contact</a>
+            <a class="nav-op" href="contact.html">Contáctanos</a>
           </li>
         </ul>
+      </div>
+      <div id="nav-right" class="collapse navbar-collapse">
+		<form>
+			<input id="search-bar" type="search" placeholder="Buscar...">
+		</form>
+		<a href="post.html">
+  			<img src="img/search_icon.png" alt="ícono de búsqueda">
+  		</a>
+      	<a href="inicio_sesion.html" class="nav-op">Iniciar sesión</a>
+      	<div id="registro" class="collapse navbar-collapse">
+      		<a href="registro.html" class="nav-op" id="nav-reg">Registro</a>
+      	</div>
       </div>
     </div>
   </nav>
 
   <!-- Page Header -->
-  <header class="masthead" style="background-image: url('img/about-bg.jpg')">
+  <header class="masthead" style="background-image: url('img/food_about_bg.jpg')">
     <div class="overlay"></div>
     <div class="container">
       <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
           <div class="page-heading">
-            <h1>About Me</h1>
-            <span class="subheading">This is what I do.</span>
+            <h1>Sobre nosotros</h1>
+            <span class="subheading">Esto es lo que hacemos.</span>
           </div>
         </div>
       </div>
@@ -71,9 +88,41 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-8 col-md-10 mx-auto">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe nostrum ullam eveniet pariatur voluptates odit, fuga atque ea nobis sit soluta odio, adipisci quas excepturi maxime quae totam ducimus consectetur?</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius praesentium recusandae illo eaque architecto error, repellendus iusto reprehenderit, doloribus, minus sunt. Numquam at quae voluptatum in officia voluptas voluptatibus, minus!</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut consequuntur magnam, excepturi aliquid ex itaque esse est vero natus quae optio aperiam soluta voluptatibus corporis atque iste neque sit tempora!</p>
+        <p>Queremos crear una comunidad, donde las personas puedan compartir sus recetas favoritas en un lugar público y detallar con varios pasos la manera en que se pueden cocinar dichas recetas.</p>
+        <p>Buscamos que haya interacción entre los distintos usuarios, que las personas compartan sus experiencias al probar las distintas recetas que se pueden encontrar en el sitio.</p>
+        <div id="equipo" class="col-lg-12 col-md-10 mx-auto">
+          <h2>Conoce a nuestro equipo</h2>
+          <div class="imagegrid-container col-lg-12 col-md-10 mx-auto">
+            <div class="teamCont">
+              <div class="teamtxt">
+                <h3>David Alfredo Santistevan Amat</h3>
+                <h6>dsantist@espol.edu.ec</h6>
+              </div>
+              <img src="img/profileDavid.jpg" alt="profileDavid">
+            </div>
+            <div class="teamCont">
+              <div class="teamtxt">
+                <h3>Cristhian Andres Lopez Fuertes</h3>
+                <h6>crianlop@espol.edu.ec</h6>
+              </div>
+              <img src="img/recipeimg/Peanut_butter_coconout_cookies.jpg" alt="profileCris">
+            </div>
+            <div class="teamCont">
+              <div class="teamtxt">
+                <h3>Carlos Humberto Jimenez Farfan</h3>
+                <h6>cajifarf@espol.edu.ec</h6>
+              </div>
+              <img src="img/profileCarlos.jpg" alt="profileCarlos">
+            </div>
+            <div class="teamCont">
+              <div class="teamtxt">
+                <h3>Xavier Eduardo Carlier Auz</h3>
+                <h6>xecarlie@espol.edu.ec</h6>
+              </div>
+              <img src="img/profileXavier.JPG" alt="profileXavier">
+            </div>
+        </div>
+        </div>
       </div>
     </div>
   </div>
