--- a/Plantilla/startbootstrap-clean-blog-gh-pages/contact.html
+++ b/Plantilla/startbootstrap-clean-blog-gh-pages/contact.html
@@ -22,6 +22,8 @@
 
   <!-- Custom styles for this template -->
   <link href="css/clean-blog.min.css" rel="stylesheet">
+  <link href="css/homepage.css" rel="stylesheet">
+  <link href="css/recipe.css" rel="stylesheet">
 
 </head>
 
@@ -30,7 +32,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-light">
     <div class="container">
-      <a class="navbar-brand logo" href="homepage.html">Logo</a>
+      <a class="navbar-brand logo" href="homepage.html">Sabores Compartidos</a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         Menu
         <i class="fas fa-bars"></i>
