--- a/Plantilla/startbootstrap-clean-blog-gh-pages/inicio_sesion.html
+++ b/Plantilla/startbootstrap-clean-blog-gh-pages/inicio_sesion.html
@@ -31,7 +31,7 @@
     <div class="row">
       <div class="col-lg-6 col-md-12 mx-auto inner_pad text-center reg-log-form">
       	<div>
-	      	<a href="homepage.html" class="logo">Logo</a>
+	      	<a href="homepage.html" class="logo">Sabores Compartidos</a>
 	      </div>
         <div>
           <h1>Inicia Sesión</h1>
