cambios de responsive de navbar, inicio sesion y registro

--- a/Plantilla/startbootstrap-clean-blog-gh-pages/contact.html
+++ b/Plantilla/startbootstrap-clean-blog-gh-pages/contact.html
@@ -40,7 +40,7 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-op" href="homepage.html">Principal</a>
+            <a class="nav-op" href="about.html">Detalle</a>
           </li>
           <li class="nav-item">
             <a class="nav-op" href="receta.html">Receta</a>
@@ -50,6 +50,15 @@
           </li>
           <li class="nav-item">
             <a class="nav-op" href="contact.html">Contáctanos</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-op" href="noticias.html">Noticias</a>
+          </li>
+          <li class="nav-item IniRegNav">
+            <a class="nav-op" href="inicio_sesion.html">Iniciar sesión</a>
+          </li>
+          <li class="nav-item IniRegNav">
+            <a class="nav-op" href="registro.html">Registro</a>
           </li>
         </ul>
       </div>
