--- a/Plantilla/startbootstrap-clean-blog-gh-pages/homepage.html
+++ b/Plantilla/startbootstrap-clean-blog-gh-pages/homepage.html
@@ -21,6 +21,7 @@
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
 
   <!-- Custom styles for this template -->
+  <link href="css/clean-blog.min.css" rel="stylesheet">
   <link href="css/homepage.css" rel="stylesheet">
 
 </head>
@@ -38,7 +39,7 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-op" href="homepage.html">Principal</a>
+            <a class="nav-op" href="about.html">Detalle</a>
           </li>
           <li class="nav-item">
             <a class="nav-op" href="receta.html">Receta</a>
@@ -49,6 +50,15 @@
           <li class="nav-item">
             <a class="nav-op" href="contact.html">Contáctanos</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-op" href="noticias.html">Noticias</a>
+          </li>
+          <li class="nav-item IniRegNav">
+            <a class="nav-op" href="inicio_sesion.html">Iniciar sesión</a>
+          </li>
+          <li class="nav-item IniRegNav">
+            <a class="nav-op" href="registro.html">Registro</a>
+          </li>
         </ul>
       </div>
       <div id="nav-right" class="collapse navbar-collapse">
@@ -56,11 +66,11 @@
 			<input id="search-bar" type="search" placeholder="Buscar...">
 		</form>
 		<a href="post.html">
-  			<img src="img/search_icon.png" alt="ícono de búsqueda">
+  			<img src="img/search_icon.png" alt="Ícono de búsqueda">
   		</a>
       	<a href="inicio_sesion.html" class="nav-op">Iniciar sesión</a>
       	<div id="registro" class="collapse navbar-collapse">
-      		<a href="registro.html" class="nav-op" id="nav-reg">Registro</a>
+      		<a href="registro.html" class="nav-op red-button button">Registro</a>
       	</div>
       </div>
     </div>
