--- a/Plantilla/startbootstrap-clean-blog-gh-pages/registro.html
+++ b/Plantilla/startbootstrap-clean-blog-gh-pages/registro.html
@@ -22,17 +22,63 @@
 
   <!-- Custom styles for this template -->
   <link href="css/clean-blog.min.css" rel="stylesheet">
+  <link href="css/homepage.css" rel="stylesheet">
+  <link href="css/recipe.css" rel="stylesheet">
 
 </head>
 
 <body>
-  
+  <!-- Navigation -->
+  <nav class="navbar navbar-expand-lg navbar-light">
+    <div class="container">
+      <a class="navbar-brand logo" href="homepage.html">Sabores Compartidos</a>
+      <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+        Menu
+        <i class="fas fa-bars"></i>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarResponsive">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-op" href="about.html">Detalle</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-op" href="receta.html">Receta</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-op" href="post.html">Buscar</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-op" href="contact.html">Contáctanos</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-op" href="noticias.html">Noticias</a>
+          </li>
+          <li class="nav-item IniRegNav">
+            <a class="nav-op" href="inicio_sesion.html">Iniciar sesión</a>
+          </li>
+          <li class="nav-item IniRegNav">
+            <a class="nav-op" href="registro.html">Registro</a>
+          </li>
+        </ul>
+      </div>
+      <div id="nav-right" class="collapse navbar-collapse">
+		<form>
+			<input id="search-bar" type="search" placeholder="Buscar...">
+		</form>
+		<a href="post.html">
+  			<img src="img/search_icon.png" alt="Ícono de búsqueda">
+  		</a>
+      	<a href="inicio_sesion.html" class="nav-op">Iniciar sesión</a>
+      	<div id="registro" class="collapse navbar-collapse">
+      		<a href="registro.html" class="nav-op red-button button">Registro</a>
+      	</div>
+      </div>
+    </div>
+  </nav>
+
   <!-- Main Content -->
     <div class="row">
       <div class="col-lg-6 col-md-12 mx-auto inner_pad text-center reg-log-form">
-      	<div>
-	      	<a href="homepage.html" class="logo">Sabores Compartidos</a>
-	      </div>
         <div>
           <h1>Regístrate</h1>
         </div>
@@ -68,9 +114,6 @@
           <div class="form-group floating-label-form-group controls inner_pad">
             <label class="text-muted">Contraseña</label>
             <input class="dark-font" type="password">
-          </div>
-          <div>
-            <a class="text-muted" href="#">Olvidaste tu contraseña?</a>
           </div>
           <div class="form-group floating-label-form-group controls inner_pad">
             <button class="red-button button">Sign In</button>
