--- a/Plantilla/startbootstrap-clean-blog-gh-pages/inicio_sesion.html
+++ b/Plantilla/startbootstrap-clean-blog-gh-pages/inicio_sesion.html
@@ -105,11 +105,11 @@
         <form class="text-center">
           <div class="form-group floating-label-form-group controls inner_pad">
             <label class="text-muted">Email</label>
-            <input class="dark-font" type="email">
+            <input class="dark-font" type="email" required>
           </div>
           <div class="form-group floating-label-form-group controls inner_pad">
             <label class="text-muted">Contraseña</label>
-            <input class="dark-font" type="password">
+            <input class="dark-font" type="password" required>
           </div>
           <div>
             <a class="text-muted" href="#">Olvidaste tu contraseña?</a>
