--- a/Plantilla/startbootstrap-clean-blog-gh-pages/registro.html
+++ b/Plantilla/startbootstrap-clean-blog-gh-pages/registro.html
@@ -105,15 +105,15 @@
         <form class="text-center">
           <div class="form-group floating-label-form-group controls inner_pad">
             <label class="text-muted">Nombre de usuario</label>
-            <input class="dark-font" type="text">
+            <input class="dark-font" type="text" required>
           </div>
           <div class="form-group floating-label-form-group controls inner_pad">
             <label class="text-muted">Email</label>
-            <input class="dark-font" type="email">
+            <input class="dark-font" type="email" required>
           </div>
           <div class="form-group floating-label-form-group controls inner_pad">
             <label class="text-muted">Contraseña</label>
-            <input class="dark-font" type="password">
+            <input class="dark-font" type="password" required>
           </div>
           <div class="form-group floating-label-form-group controls inner_pad">
             <button class="red-button button">Sign In</button>
