--- a/Plantilla/startbootstrap-clean-blog-gh-pages/noticias.html
+++ b/Plantilla/startbootstrap-clean-blog-gh-pages/noticias.html
@@ -16,38 +16,62 @@
   <!-- Custom fonts for this template -->
   <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
   <link href='https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
+  <link href="https://fonts.googleapis.com/css?family=Leckerli+One&amp;display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,600&amp;display=swap" rel="stylesheet">
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
 
   <!-- Custom styles for this template -->
   <link href="css/clean-blog.min.css" rel="stylesheet">
+  <link href="css/homepage.css" rel="stylesheet">
 
 </head>
 
 <body>
 
   <!-- Navigation -->
-  <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
+  <nav class="navbar navbar-expand-lg navbar-light">
     <div class="container">
-      <a class="navbar-brand" href="index.html">Start Bootstrap</a>
+      <a class="navbar-brand logo" href="index.html">Sabores Compartidos</a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         Menu
         <i class="fas fa-bars"></i>
       </button>
       <div class="collapse navbar-collapse" id="navbarResponsive">
-        <ul class="navbar-nav ml-auto">
+        <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" href="index.html">Home</a>
+            <a class="nav-op" href="about.html">Detalle</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="about.html">About</a>
+            <a class="nav-op" href="receta.html">Receta</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="post.html">Sample Post</a>
+            <a class="nav-op" href="post.html">Buscar</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="contact.html">Contact</a>
+            <a class="nav-op" href="contact.html">Contáctanos</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-op" href="noticias.html">Noticias</a>
+          </li>
+          <li class="nav-item IniRegNav">
+            <a class="nav-op" href="inicio_sesion.html">Iniciar sesión</a>
+          </li>
+          <li class="nav-item IniRegNav">
+            <a class="nav-op" href="registro.html">Registro</a>
           </li>
         </ul>
+      </div>
+      <div id="nav-right" class="collapse navbar-collapse">
+		<form>
+			<input id="search-bar" type="search" placeholder="Buscar...">
+		</form>
+		<a href="post.html">
+  			<img src="img/search_icon.png" alt="Ícono de búsqueda">
+  		</a>
+      	<a href="inicio_sesion.html" class="nav-op">Iniciar sesión</a>
+      	<div id="registro" class="collapse navbar-collapse">
+      		<a href="registro.html" class="nav-op red-button button">Registro</a>
+      	</div>
       </div>
     </div>
   </nav>
