Agregado recetas.html

--- a/Plantilla/startbootstrap-clean-blog-gh-pages/contact.html
+++ b/Plantilla/startbootstrap-clean-blog-gh-pages/contact.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>contacto</title>
+  <title>Contáctanos</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -46,7 +46,7 @@
             <a class="nav-op" href="receta.html">Receta</a>
           </li>
           <li class="nav-item">
-            <a class="nav-op" href="post.html">Buscar</a>
+            <a class="nav-op" href="recetas.html">Buscar</a>
           </li>
           <li class="nav-item">
             <a class="nav-op" href="contact.html">Contáctanos</a>
@@ -66,7 +66,7 @@
 		<form>
 			<input id="search-bar" type="search" placeholder="Buscar...">
 		</form>
-		<a href="post.html">
+		<a href="recetas.html">
   			<img src="img/search_icon.png" alt="Ícono de búsqueda">
   		</a>
       	<a href="inicio_sesion.html" class="nav-op">Iniciar sesión</a>
