--- a/Plantilla/startbootstrap-clean-blog-gh-pages/about.html
+++ b/Plantilla/startbootstrap-clean-blog-gh-pages/about.html
@@ -47,7 +47,7 @@
             <a class="nav-op" href="receta.html">Receta</a>
           </li>
           <li class="nav-item">
-            <a class="nav-op" href="post.html">Buscar</a>
+            <a class="nav-op" href="recetas.html">Buscar</a>
           </li>
           <li class="nav-item">
             <a class="nav-op" href="contact.html">Contáctanos</a>
@@ -67,7 +67,7 @@
 		<form>
 			<input id="search-bar" type="search" placeholder="Buscar...">
 		</form>
-		<a href="post.html">
+		<a href="recetas.html">
   			<img src="img/search_icon.png" alt="Ícono de búsqueda">
   		</a>
       	<a href="inicio_sesion.html" class="nav-op">Iniciar sesión</a>
