--- a/Plantilla/startbootstrap-clean-blog-gh-pages/about.html
+++ b/Plantilla/startbootstrap-clean-blog-gh-pages/about.html
@@ -96,12 +96,12 @@
   <!-- Main Content -->
   <div class="container">
     <div class="row">
-      <div class="col-lg-8 col-md-10 mx-auto">
+      <div class="col-lg-12 col-md-11">
         <p>Queremos crear una comunidad, donde las personas puedan compartir sus recetas favoritas en un lugar público y detallar con varios pasos la manera en que se pueden cocinar dichas recetas.</p>
         <p>Buscamos que haya interacción entre los distintos usuarios, que las personas compartan sus experiencias al probar las distintas recetas que se pueden encontrar en el sitio.</p>
-        <div id="equipo" class="col-lg-12 col-md-10 mx-auto">
+        <div id="equipo" class="col-lg-12 col-md-12">
           <h2>Conoce a nuestro equipo</h2>
-          <div class="imagegrid-container col-lg-12 col-md-10 mx-auto">
+          <div class="imagegrid-container col-lg-12 col-md-12">
             <div class="teamCont">
               <div class="teamtxt">
                 <h3>David Alfredo Santistevan Amat</h3>
