design changes, introjs, responsive

--- a/Plantilla/startbootstrap-clean-blog-gh-pages/contact.html
+++ b/Plantilla/startbootstrap-clean-blog-gh-pages/contact.html
@@ -148,33 +148,67 @@
 
   <hr>
 
+
   <!-- Footer -->
   <footer>
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-8 col-md-10 mx-auto">
-          <ul class="list-inline text-center">
-            <li class="list-inline-item">
-              <a href="#" class="circle-icon facebook_icon">
-                <img width="30" height="30" src="img/facebook.png" alt="ícono de facebook">
-              </a>
-            </li>
-            <li class="list-inline-item">
-              <a href="#" class="circle-icon google_plus">
-                <img width="30" height="20" src="img/goog_plus.png" alt="ícono de google plus">
-              </a>
-            </li>
-            <li class="list-inline-item">
-              <a href="#" class="circle-icon linked_in">
-                <img width="20" height="20" src="img/linked_in.png" alt="ícono de linked in">
-              </a>
-            </li>
-          </ul>
-          <p class="copyright text-muted">Copyright &copy; Your Website 2020</p>
+    <div class="actual-footer">
+      <div class="first-half col-lg-4 col-md-4">
+        <div class="nav-options col-md-4">
+          <span>Home</span>
+          <span>About</span>
+          <span>Features</span>
+          <span>Pricing</span>
+          <span>Contact us</span>
+        </div>
+        <div class="other-options col-md-4">
+          <span>Blog</span>
+          <span>Search</span>
+          <span>T & Cs</span>
+          <span>Privacy</span>
+          <span>Community</span>
         </div>
       </div>
+      <div class="second-half col-lg-4 col-md-4">
+        <div class="get-our-newsletter">
+          <span>Suscribete</span>
+        </div>
+
+        <div class="email-form">
+          <input type="text" placeholder="Ingresa tu email">
+          <button id='subscribe-btn'>Suscribirme</button>
+        </div>
+      </div>
+      <div class="col-lg-4 col-md-4 mx-auto">
+        <ul class="list-inline text-center">
+          <li class="list-inline-item">
+            <a href="#">
+              <span class="fa-stack fa-lg">
+                <i class="fas fa-circle fa-stack-2x"></i>
+                <i class="fab fa-twitter fa-stack-1x fa-inverse"></i>
+              </span>
+            </a>
+          </li>
+          <li class="list-inline-item">
+            <a href="#">
+              <span class="fa-stack fa-lg">
+                <i class="fas fa-circle fa-stack-2x"></i>
+                <i class="fab fa-facebook-f fa-stack-1x fa-inverse"></i>
+              </span>
+            </a>
+          </li>
+          <li class="list-inline-item">
+            <a href="#">
+              <span class="fa-stack fa-lg">
+                <i class="fas fa-circle fa-stack-2x"></i>
+                <i class="fab fa-github fa-stack-1x fa-inverse"></i>
+              </span>
+            </a>
+          </li>
+        </ul>
+        <p class="copyright text-muted" id="copyright">Copyright &copy; Your Website 2020</p>
+      </div>
     </div>
-  </footer>
+</footer>
 
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
