--- a/Plantilla/startbootstrap-clean-blog-gh-pages/recetas.html
+++ b/Plantilla/startbootstrap-clean-blog-gh-pages/recetas.html
@@ -210,4 +210,65 @@
     
       <!-- Custom scripts for this template -->
       <script src="js/clean-blog.min.js"></script>
+
+    <!-- Footer -->
+    <footer>
+      <div class="actual-footer">
+        <div class="first-half col-lg-4 col-md-4">
+          <div class="nav-options col-md-4">
+            <span>Home</span>
+            <span>About</span>
+            <span>Features</span>
+            <span>Pricing</span>
+            <span>Contact us</span>
+          </div>
+          <div class="other-options col-md-4">
+            <span>Blog</span>
+            <span>Search</span>
+            <span>T & Cs</span>
+            <span>Privacy</span>
+            <span>Community</span>
+          </div>
+        </div>
+        <div class="second-half col-lg-4 col-md-4">
+          <div class="get-our-newsletter">
+            <span>Suscribete</span>
+          </div>
+  
+          <div class="email-form">
+            <input type="text" placeholder="Ingresa tu email">
+            <button id='subscribe-btn'>Suscribirme</button>
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-4 mx-auto">
+          <ul class="list-inline text-center">
+            <li class="list-inline-item">
+              <a href="#">
+                <span class="fa-stack fa-lg">
+                  <i class="fas fa-circle fa-stack-2x"></i>
+                  <i class="fab fa-twitter fa-stack-1x fa-inverse"></i>
+                </span>
+              </a>
+            </li>
+            <li class="list-inline-item">
+              <a href="#">
+                <span class="fa-stack fa-lg">
+                  <i class="fas fa-circle fa-stack-2x"></i>
+                  <i class="fab fa-facebook-f fa-stack-1x fa-inverse"></i>
+                </span>
+              </a>
+            </li>
+            <li class="list-inline-item">
+              <a href="#">
+                <span class="fa-stack fa-lg">
+                  <i class="fas fa-circle fa-stack-2x"></i>
+                  <i class="fab fa-github fa-stack-1x fa-inverse"></i>
+                </span>
+              </a>
+            </li>
+          </ul>
+          <p class="copyright text-muted" id="copyright">Copyright &copy; Your Website 2020</p>
+        </div>
+      </div>
+</footer>
 </body>
