--- a/Plantilla/startbootstrap-clean-blog-gh-pages/index.html
+++ b/Plantilla/startbootstrap-clean-blog-gh-pages/index.html
@@ -43,10 +43,13 @@
           <li class="nav-item" data-step='2' data-intro="En esta página podrás enterarte de las últimas noticias y recetas añadidas">
             <a class="nav-op" href="noticias.html">Noticias</a>
           </li>
-          <li class="nav-item" data-step='3' data-intro="Aqui podrás ponerte en contacto con nosotros">
+          <li class="nav-item" data-step='3' data-intro="En este menú podrás observar y filtrar las recetas disponibles">
+            <a class="nav-op" href="recetas.html">Recetas</a>
+          </li>
+          <li class="nav-item" data-step='4' data-intro="Aqui podrás ponerte en contacto con nosotros">
             <a class="nav-op" href="contact.html" >Contáctanos</a>
           </li>
-          <li class="nav-item" data-step='4' data-intro="Aquí podras ver una breve descripción de nuestro equipo">
+          <li class="nav-item" data-step='5' data-intro="Aquí podras ver una breve descripción de nuestro equipo">
             <a class="nav-op" href="about.html" >Quiénes somos</a>
           </li>
           <li class="nav-item IniRegNav">
@@ -62,7 +65,7 @@
 			<input id="search-bar" type="search" placeholder="Buscar...">
 		</form>
 		<a href="recetas.html">
-  			<img src="img/search_icon.png" alt="Ícono de búsqueda">
+      <i class="fas fa-search"></i> 
   		</a>
       	<a href="inicio_sesion.html" class="nav-op">Iniciar sesión</a>
       	<div id="registro" class="collapse navbar-collapse">
@@ -103,12 +106,12 @@
       </div>
       <!-- /.col-lg-3 -->
 
-      <div class="col-lg-9">
+      <div class="col-lg-9" data-step='6' data-intro="En esta sección puedes ver un listado de las recetas disponibles" data-position="left">
         <div class="row">
 
           <div class="col-lg-4 col-md-6 mb-4">
             <div class="card h-100">
-              <a href="#"><img class="card-img-top" src="img/recipeimg/Chana_Masala.jpg" alt="Chana Masala"></a>
+              <a href="receta.html" data-step='7' data-intro="Al dar click en la miniatura podrás ver una descripción más detallada de la receta"><img class="card-img-top" src="img/recipeimg/Chana_Masala.jpg" alt="Chana Masala"></a>
               <div class="card-body">
                 <h4 class="card-title">
                   <a href="#" class = "recipeName">Chana Masala</a>
@@ -123,7 +126,7 @@
 
           <div class="col-lg-4 col-md-6 mb-4">
             <div class="card h-100">
-              <a href="#"><img class="card-img-top" src="img/recipeimg/black_bean_burritos.jpg" id = recipeImg alt="Burritos con fréjoles negros"></a>
+              <a href="receta.html"><img class="card-img-top" src="img/recipeimg/black_bean_burritos.jpg" id = recipeImg alt="Burritos con fréjoles negros"></a>
               <div class="card-body">
                 <h4 class="card-title">
                   <a href="#" class = "recipeName">Black Bean Burrito</a>
@@ -267,40 +270,64 @@
 
   <!-- Footer -->
   <footer>
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-8 col-md-10 mx-auto">
-          <ul class="list-inline text-center">
-            <li class="list-inline-item">
-              <a href="#">
-                <span class="fa-stack fa-lg">
-                  <i class="fas fa-circle fa-stack-2x"></i>
-                  <i class="fab fa-twitter fa-stack-1x fa-inverse"></i>
-                </span>
-              </a>
-            </li>
-            <li class="list-inline-item">
-              <a href="#">
-                <span class="fa-stack fa-lg">
-                  <i class="fas fa-circle fa-stack-2x"></i>
-                  <i class="fab fa-facebook-f fa-stack-1x fa-inverse"></i>
-                </span>
-              </a>
-            </li>
-            <li class="list-inline-item">
-              <a href="#">
-                <span class="fa-stack fa-lg">
-                  <i class="fas fa-circle fa-stack-2x"></i>
-                  <i class="fab fa-github fa-stack-1x fa-inverse"></i>
-                </span>
-              </a>
-            </li>
-          </ul>
-          <p class="copyright text-muted">Copyright &copy; Your Website 2020</p>
+    <div class="actual-footer">
+      <div class="first-half col-lg-4 col-md-4">
+        <div class="nav-options col-md-4">
+          <span>Home</span>
+          <span>About</span>
+          <span>Features</span>
+          <span>Pricing</span>
+          <span>Contact us</span>
+        </div>
+        <div class="other-options col-md-4">
+          <span>Blog</span>
+          <span>Search</span>
+          <span>T & Cs</span>
+          <span>Privacy</span>
+          <span>Community</span>
         </div>
       </div>
+      <div class="second-half col-lg-4 col-md-4">
+        <div class="get-our-newsletter">
+          <span>Suscribete</span>
+        </div>
+
+        <div class="email-form">
+          <input type="text" placeholder="Ingresa tu email">
+          <button id='subscribe-btn'>Suscribirme</button>
+        </div>
+      </div>
+      <div class="col-lg-4 col-md-4 mx-auto">
+        <ul class="list-inline text-center">
+          <li class="list-inline-item">
+            <a href="#">
+              <span class="fa-stack fa-lg">
+                <i class="fas fa-circle fa-stack-2x"></i>
+                <i class="fab fa-twitter fa-stack-1x fa-inverse"></i>
+              </span>
+            </a>
+          </li>
+          <li class="list-inline-item">
+            <a href="#">
+              <span class="fa-stack fa-lg">
+                <i class="fas fa-circle fa-stack-2x"></i>
+                <i class="fab fa-facebook-f fa-stack-1x fa-inverse"></i>
+              </span>
+            </a>
+          </li>
+          <li class="list-inline-item">
+            <a href="#">
+              <span class="fa-stack fa-lg">
+                <i class="fas fa-circle fa-stack-2x"></i>
+                <i class="fab fa-github fa-stack-1x fa-inverse"></i>
+              </span>
+            </a>
+          </li>
+        </ul>
+        <p class="copyright text-muted" id="copyright">Copyright &copy; Your Website 2020</p>
+      </div>
     </div>
-  </footer>
+</footer>
 
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
