cambios al nav y footer

--- a/Plantilla/startbootstrap-clean-blog-gh-pages/about.html
+++ b/Plantilla/startbootstrap-clean-blog-gh-pages/about.html
@@ -24,6 +24,7 @@
 
   <!-- Custom styles for this template -->
   <link href="css/clean-blog.min.css" rel="stylesheet">
+  <link href="css/homepage.css" rel="stylesheet">
   <link href="css/about.css" rel="stylesheet">
 
 </head>
@@ -98,7 +99,7 @@
         <p>Buscamos que haya interacción entre los distintos usuarios, que las personas compartan sus experiencias al probar las distintas recetas que se pueden encontrar en el sitio.</p>
         <div id="equipo" class="col-lg-12 col-md-12">
           <h2>Conoce a nuestro equipo</h2>
-          <div class="imagegrid-container col-lg-12 col-md-12">
+          <div class="imagegrid-container-full col-lg-12 col-md-12">
             <div class="teamCont">
               <div class="teamtxt">
                 <h3>David Alfredo Santistevan Amat</h3>
