--- a/Plantilla/startbootstrap-clean-blog-gh-pages/noticias.html
+++ b/Plantilla/startbootstrap-clean-blog-gh-pages/noticias.html
@@ -24,6 +24,7 @@
 
   <!-- Custom styles for this template -->
   <link href="css/clean-blog.min.css" rel="stylesheet">
+  <link href="css/homepage.css" rel="stylesheet">
   <link href="css/noticias.css" rel="stylesheet">
 
 </head>
@@ -81,7 +82,7 @@
     <div class="row">
       <div class="col-lg-8 col-md-10 mx-auto">
           <h1>Últimas novedades</h1>
-          <div class="imagegrid-container col-lg-12 col-md-10 mx-auto">
+          <div class="imagegrid-container-full col-lg-12 col-md-10 mx-auto">
             <a href="noticia.html">
               <div class="teamCont">
                 <img src="img/chef_news.webp" alt="noticia_chef">
