Agregada una linea en la receta

--- a/Plantilla/startbootstrap-clean-blog-gh-pages/receta.html
+++ b/Plantilla/startbootstrap-clean-blog-gh-pages/receta.html
@@ -169,7 +169,7 @@
           <li>
             <div class="number">
               4.
-              
+              <div class="line"></div>
             </div>
             <p class="step-description">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse feugiat maximus nisi id feugiat. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
